dataset/0100cBt1100110bWm2-FilteredHierarchy/.store/metadata/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FSC Sales Process</fullName>
        <description>FSC sales process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Initiate Transfer</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LLC_BI__Loan</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LLC_BI__Treasury Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Expressed_Interest__c</fullName>
        <label>Expressed Interest</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Referrer__c</fullName>
        <label>External Referrer</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>Personal Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually entered. It is used to lookup the financial institution&apos;s branch location that the opportunity is associated to.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Lost_Reason_Notes__c</fullName>
        <description>This long text area is optional and manually entered. This field provides an area where a user can include additional information as to why an Opportunity was Closed Lost.</description>
        <label>Closed Lost Reason Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Lost_Reason__c</fullName>
        <description>This picklist field is manually selected and optional. The picklist allows a user to select preset reasons for why the Opportunity was Closed Lost.</description>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor- Other</fullName>
                </value>
                <value>
                    <fullName>Competitor- Price</fullName>
                </value>
                <value>
                    <fullName>Competitor-Product/Service Functionality Gap</fullName>
                </value>
                <value>
                    <fullName>Competitor- Product/Service Set Gap,</fullName>
                </value>
                <value>
                    <fullName>Does not need services</fullName>
                </value>
                <value>
                    <fullName>Lost Loan Relationship.</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product/Service Functionality Gap</fullName>
                </value>
                <value>
                    <fullName>Product/Service Gap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor__c</fullName>
        <description>This picklist field is manually selected and optional. It is used to specify the competitor of the financial institution that the opportunity was lost or could be lost to.</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor Bank</fullName>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BMO Harris</fullName>
                </value>
                <value>
                    <fullName>BOA</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>First Midwest</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>The Private Bank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Wintrust</fullName>
                </value>
                <value>
                    <fullName>Smaller Community Bank</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Converted_Date__c</fullName>
        <description>This field is automatically populated when an opportunity is converted to nCino. This field will specify the date in which the opportunity was converted.</description>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Converted_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when an opportunity is converted to a deposit. It is a lookup field to the deposit record that was converted from the opportunity. It links the opportunity to the product that was converted.</description>
        <label>Converted Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CurrentGenerators__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Bank__c</fullName>
        <description>This field is optional and manually entered. This picklist field is used to specify the current bank at which this opportunity for the account/ relationship may be held.</description>
        <label>Current Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor Bank</fullName>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BMO Harris</fullName>
                </value>
                <value>
                    <fullName>BOA</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>First Midwest</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>The Private Bank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Wintrust</fullName>
                </value>
                <value>
                    <fullName>Smaller Community Bank</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Loan_Closed__c</fullName>
        <description>This field is automatically populated. This date field is set to the date at which the loan associated to this opportunity closed.</description>
        <label>Date Loan Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_at_Current_Stage__c</fullName>
        <description>This field is automatically populated via formula and is used to specify the number of days the loan associated to the opportunity has been in its current stage.</description>
        <formula>TODAY() - LLC_BI__Start_Date_at_Current_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DeliveryInstallationStatus__c</fullName>
        <description>This is a manually entered and optional field. This picklist field is used to specify the status of the product the opportunity is related to (eg. in progress, not yet started, completed). Workflow can be configured to automatically change the statuses when certain actions are completed by the user.  Generally this field would be used for Treasury Services products.</description>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Gross_Fee_Discount__c</fullName>
        <description>This field is manually entered and optional. This field allows users to specify a percent discount the opportunity qualifies for on the gross fee amount.</description>
        <label>Estimated Gross Fee Discount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually entered and optional. When the field it checked, it indicates the record belongs to an existing customer. Unchecked indicates this record is for a new customer.</description>
        <label>Existing Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when the opportunity is converted to a loan. This field captures the loan record that the opportunity was converted to. Linking the opportunity to the product that was converted.</description>
        <label>Converted Opportunity</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Converted Opportunity</relationshipLabel>
        <relationshipName>ConvertedOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MainCompetitors__c</fullName>
        <description>This text field is manually entered and optional. It is generally used to specify the main competitors for the financial institution closing this opportunity.</description>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OrderNumber__c</fullName>
        <description>This text field is manually entered and optional. It is used to specify the financial institution&apos;s unique number ( order number) for this opportunity if it differs from the Salesforce record number automatically assigned to it upon creation.</description>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field manually selected and will drive the available product type and product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This picklist field is manually selected and drives the available product type and product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Leasing and Finance</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is a system generated field and specifies the Product Package the lead was converted to. The field is populated after the Convert to Product Package process is executed. The product package field is a lookup to the product package record that the loan associated to this opportunity is a part of.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for.  Use either the reference or the picklist field..</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is manually selected and will filter based on product line selection and will drive the available product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This picklist field is manually selected and will filter based on product line selection and will drive the available product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Non-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
                <value>
                    <fullName>7(a)</fullName>
                </value>
                <value>
                    <fullName>504</fullName>
                </value>
                <value>
                    <fullName>Consumer - Mortgage</fullName>
                </value>
                <value>
                    <fullName>Personal CD</fullName>
                </value>
                <value>
                    <fullName>Personal Checking</fullName>
                </value>
                <value>
                    <fullName>Personal Savings</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Consumer - HELOC</fullName>
                </value>
                <value>
                    <fullName>Consumer - Home Equity Term Loan</fullName>
                </value>
                <value>
                    <fullName>Consumer - Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>Consumer - Unsecured LOC</fullName>
                </value>
                <value>
                    <fullName>Consumer - Vehicle</fullName>
                </value>
                <value>
                    <fullName>Consumer - Unsecured Term</fullName>
                </value>
                <value>
                    <fullName>Leasing and Finance</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This picklist field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the opportunity&apos;s particular product  Use either the reference or the picklist field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Multi-Advance</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>MultiAdvance</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Unimproved - Purchase</fullName>
                </value>
                <value>
                    <fullName>Unimproved - Refinance</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>RLOC</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Working Capital - Term Loan</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Balloon</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Platinum Checking Account</fullName>
                </value>
                <value>
                    <fullName>Gold Checking Account</fullName>
                </value>
                <value>
                    <fullName>Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Regular Savings</fullName>
                </value>
                <value>
                    <fullName>Promo CD</fullName>
                </value>
                <value>
                    <fullName>6 Month Promo Personal CD</fullName>
                </value>
                <value>
                    <fullName>Special CD</fullName>
                </value>
                <value>
                    <fullName>12 - 24 Month Personal CD</fullName>
                </value>
                <value>
                    <fullName>SEP IRA</fullName>
                </value>
                <value>
                    <fullName>Traditional IRA</fullName>
                </value>
                <value>
                    <fullName>ROTH IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Products_Interested_In__c</fullName>
        <description>This field is manually entered and optional. It is a free form text area that allows the user to detail any additional products the relationship/account associated to the existing opportunity may be interested in.</description>
        <label>Products Interested In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prospect_Annual_Revenue__c</fullName>
        <description>This currency field is manually entered and optional, it can be used to specify the relationship&apos;s annual revenue. This relationship would be the one that is directly associated to the opportunity.</description>
        <label>Prospect Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prospect_Location_Scope__c</fullName>
        <description>This picklist field is manually selected and optional. The field allows the user to specify the scope at which the location of the prospect (relationship) is marketed( eg. local, regional, national, etc.). The relationship would be the one that is directly associated to the opportunity.</description>
        <label>Prospect Location Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a manually selected and optional. This checkbox (if checked) is used to specify that the opportunity has had an RFP (request for proposal) associated to it.</description>
        <label>RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date_at_Current_Stage__c</fullName>
        <description>This date field is automatically populated based on the date that the current stage was entered into. The field helps drive the actual days at current stage.</description>
        <label>Start Date at Current Stage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Deposits__c</fullName>
        <description>This field is automatically populated based on the total amount (currency) of the deposits of the account/ relationship associated to the opportunity. This information is mapped from the relationship if deposit level detail is available.</description>
        <label>Total Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TrackingNumber__c</fullName>
        <description>This text field is optional and manually entered. It is used to specify a unique tracking number for the opportunity--if the financial institution employs unique tracking numbers.</description>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Linked_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used to link opportunities together to convert them into a single nCino product package.</inlineHelpText>
        <label>Linked Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Linked_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORMS__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllTreasOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>LLC_BI__Days_at_Current_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Treasury Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
</CustomObject>